// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pairings utils getPairings should compute initial pairings graph to be random 1`] = `
Array [
  Array [
    "1",
    "2",
  ],
  Array [
    "3",
    "6",
  ],
  Array [
    "4",
    "5",
  ],
  Array [
    "7",
    "8",
  ],
]
`;

exports[`pairings utils getPairings should correctly pair players in the same match point tier 1`] = `
Array [
  Array [
    "6",
    "7",
  ],
  Array [
    "2",
    "3",
  ],
  Array [
    "4",
    "5",
  ],
  Array [
    "0",
    "1",
  ],
]
`;

exports[`pairings utils getPairings should down pair odd numbered pairings 1`] = `
Array [
  Array [
    1,
    3,
  ],
]
`;
